# agentic-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties  streamlit_app.py
.cursor/rules/: adk-autonomous-research-agent.mdc  feature-branch-workflow.mdc  sonarqube_mcp_instructions.mdc  test-coverage-80.mdc
.github/workflows/: qa.yml
.sonarlint/: connectedMode.json
app/: __init__.py  config.py
app/a2a/: __init__.py  news_agent_card.py  news_executor.py  news_service.py  news_starlette_app.py
app/agents/: __init__.py  core_rag.py  external_knowledge.py  news_focused.py  phase3_mcp.py  phase5_collaborative.py  phase6_canvas.py  refinement_loop.py  session_runner.py
app/canvas/: __init__.py  artifact_extract.py  models.py
app/knowledge/: __init__.py  chunking.py  embeddings.py  store.py
app/mcp/: __init__.py  fetch_client.py  (+1 more)
docs/: langfuse-self-hosted.md  manual-testing.md
tests/: conftest.py  test_canvas_artifact_extract.py  test_chunking.py  test_config.py  test_core_rag_agent.py  test_document_search_tool.py  test_embeddings_vertex_mocked.py  test_external_knowledge_agent.py  test_faiss_store.py  test_fetch_client_mocked_stdio.py  test_google_search_tool_wrap.py  test_knowledge_corpus.py  test_lab_demo.py  test_langfuse_client.py  test_langfuse_flush.py  test_mcp_stdio_params.py  test_news_service_and_client.py  test_phase3_mcp.py  test_phase5_news_a2a.py  test_phase6_canvas.py  test_refinement_loop.py  test_session_runner_helpers.py  test_session_runner_run.py  test_ui_cli.py
(+18 files in other folders)
